--- a/src/index.css
+++ b/src/index.css
@@ -18,12 +18,12 @@
 }
 
 /* Hide scrollbar for Chrome, Safari, and Opera */
-.scrollbar-hidden::-webkit-scrollbar {
+.scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge, and Firefox */
-.scrollbar-hidden {
+.scrollbar-hide {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
